Added mxping command, fixed few Java 11 issues